# nornir-inspect

./: .flake8  .yamllint  Makefile  README.md  nornir_inspect.py  pyproject.toml  scrap.py
.github/workflows/: ci.yml
example/: nr_run_task.py
tests/: conftest.py  hosts.yaml  test_example.py  test_nr_inspect.py
