[tool.poetry]
name = "nornir-inspect"
version = "1.0.3"
description = "Nornir inspection tool"
authors = ["Packet Coders <contact@packetcoders.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
rich = "^12.5.1"
nornir = "^3.3.0"

[tool.poetry.group.dev.dependencies]
nornir = "3.3.0"
nornir-utils = "^0.2.0"
attrs = "21.4.0"
backcall = "0.2.0"
bandit = "1.7.1"
black = "21.9b0"
certifi = "2021.10.8"
charset-normalizer = "2.0.9"
click = "8.0.3"
colorama = "0.4.4"
commonmark = "0.9.1"
debugpy = "1.5.1"
decorator = "5.1.0"
entrypoints = "0.3"
eradicate = "2.0.0"
flake8 = "4.0.1"
flake8-builtins = "1.5.3"
flake8-print = "4.0.0"
gitdb = "4.0.9"
GitPython = "3.1.24"
idna = "3.3"
ipykernel = "6.6.0"
ipython = "7.31.1"
jedi = "0.18.1"
jupyter-client = "7.1.0"
jupyter-core = "4.9.1"
matplotlib-inline = "0.1.3"
mccabe = "0.6.1"
mypy = "0.931"
mypy-extensions = "0.4.3"
nest-asyncio = "1.5.4"
parso = "0.8.3"
pathspec = "0.9.0"
pbr = "5.8.0"
pexpect = "4.8.0"
pickleshare = "0.7.5"
platformdirs = "2.4.0"
prompt-toolkit = "3.0.23"
ptyprocess = "0.7.0"
pycodestyle = "2.8.0"
pydocstyle = "6.1.1"
pyflakes = "2.4.0"
Pygments = "2.10.0"
python-dateutil = "2.8.2"
PyYAML = "6.0"
pyzmq = "22.3.0"
regex = "2021.10.8"
requests = "2.26.0"
six = "1.16.0"
smmap = "5.0.0"
snowballstemmer = "2.2.0"
stevedore = "3.5.0"
toml = "0.10.2"
tomli = "1.2.1"
traitlets = "5.1.1"
urllib3 = "1.26.7"
wcwidth = "0.2.5"
yamllint = "1.26.3"
isort = "^5.10.1"
autoflake = "^1.4"
pytest = "^7.1.3"
rich = "^12.5.1"
pytest-clarity = "^1.0.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs = [".venv", "tests"]

[tool.black]
exclude = "(.venv)"

[tool.isort]
profile = "black"
skip = ".venv"
balanced_wrapping = true
atomic = true

[tool.pydocstyle]
match_dir = '^(?!(tests|.venv|virtualenvs)).*'
inherit = false
ignore = 'D400,D415,D203,D104,D213,D100,D205,D212,D407,D413,D406'
match = '.*\.py'


[tool.mypy]
exclude = 'virtualenvs/'
pretty = true
