[project]
name = "nornir-inspect"
version = "1.1.1"
description = "Nornir inspection tool"
authors = [{ name = "Packet Coders", email = "contact@packetcoders.io" }]
requires-python = "~=3.11"
readme = "README.md"
dependencies = [
    "rich>=12, <15",
    "nornir>=3.5.0,<4",
]

[dependency-groups]
dev = [
    "nornir==3.5.0",
    "nornir-utils>=0.2.0,<0.3",
    "attrs==25.3.0",
    "autoflake==2.3.1",
    "bandit==1.8.3",
    "black==25.1.0",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "colorama==0.4.6",
    "commonmark==0.9.1",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "entrypoints==0.4",
    "eradicate==3.0.0",
    "flake8==7.2.0",
    "flake8-builtins==2.5.0",
    "flake8-print==5.0.0",
    "gitdb==4.0.12",
    "GitPython==3.1.44",
    "idna==3.10",
    "ipykernel==6.29.5",
    "ipython==9.3.0",
    "jedi==0.19.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "matplotlib-inline==0.1.7",
    "mccabe==0.7.0",
    "mypy==1.16.0",
    "mypy-extensions==1.1.0",
    "nest-asyncio==1.6.0",
    "parso==0.8.4",
    "pathspec==0.12.1",
    "pbr==6.1.1",
    "pexpect==4.9.0",
    "pickleshare==0.7.5",
    "platformdirs==4.3.8",
    "prompt-toolkit==3.0.51",
    "ptyprocess==0.7.0",
    "pycodestyle==2.13.0",
    "pydocstyle==6.3.0",
    "pyflakes==3.3.2",
    "Pygments==2.19.1",
    "python-dateutil==2.9.0.post0",
    "PyYAML==6.0.2",
    "pyzmq==26.4.0",
    "regex==2024.11.6",
    "requests==2.32.4",
    "six==1.17.0",
    "smmap==5.0.2",
    "snowballstemmer==3.0.1",
    "stevedore==5.4.1",
    "toml==0.10.2",
    "tomli==2.2.1",
    "traitlets==5.14.3",
    "urllib3==2.4.0",
    "wcwidth==0.2.13",
    "yamllint==1.37.1",
    "isort==6.0.1",
    "pytest==8.4.0",
    "pytest-clarity>=1.0.1,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.bandit]
exclude_dirs = [".venv", "tests"]

[tool.black]
exclude = "(.venv)"

[tool.isort]
profile = "black"
skip = ".venv"
balanced_wrapping = true
atomic = true

[tool.pydocstyle]
match_dir = '^(?!(tests|.venv|virtualenvs)).*'
inherit = false
ignore = 'D400,D415,D203,D104,D213,D100,D205,D212,D407,D413,D406'
match = '.*\.py'

[tool.mypy]
exclude = 'virtualenvs/'
pretty = true
